# M5UnitUnified

./: .gitignore  CMakeLists.txt  README.ja.md  README.md  _m5_unit_component_8cpp.html  _m5_unit_component_8hpp.html  _m5_unit_component_8hpp.js  _m5_unit_component_8hpp_source.html  _m5_unit_unified_8cpp.html  _m5_unit_unified_8hpp.html  _m5_unit_unified_8hpp.js  _m5_unit_unified_8hpp_source.html  adapter_8cpp.html  adapter_8cpp.js  adapter_8hpp.html  adapter_8hpp.js  adapter_8hpp_source.html  adapter__base_8hpp.html  adapter__base_8hpp.js  adapter__base_8hpp_source.html  adapter__gpio_8cpp.html  adapter__gpio_8cpp.js  adapter__gpio_8hpp.html  adapter__gpio_8hpp.js  adapter__gpio_8hpp_source.html  adapter__gpio__v1_8cpp.html  adapter__gpio__v1_8hpp.html  adapter__gpio__v1_8hpp_source.html  adapter__gpio__v2_8cpp.html  adapter__gpio__v2_8cpp.js  adapter__gpio__v2_8hpp.html  adapter__gpio__v2_8hpp.js  adapter__gpio__v2_8hpp_source.html  adapter__i2c_8cpp.html  adapter__i2c_8hpp.html  adapter__i2c_8hpp.js  adapter__i2c_8hpp_source.html  adapter__spi_8cpp.html  adapter__spi_8hpp.html  adapter__spi_8hpp.js  (+185 more)
.github/ISSUE_TEMPLATE/: bug-report.yml
.github/workflows/: Arduino-Lint-Check.yml  clang-format-check.yml  doxygen-gh-pages.yml  platformio-build-check.yml
boards/: m5stack-nanoc6.json  m5stack-nanoh2.json
docs/: Doxyfile
examples/Basic/ComponentOnly/: ComponentOnly.ino  README.md
examples/Basic/SelfUpdate/: README.md  SelfUpdate.ino
examples/Basic/Simple/: README.md  Simple.ino
examples/ReijiMeter/: main.cpp  sprite2.hpp
examples/ResetAndPlay/: ResetAndPlay.ino
examples/ResetAndPlay/main/: ResetAndPlay.cpp
examples/SCD4x/: SCD4x.cpp  SCD4x.ino
examples/UnitEnv_III/: UnitEnv_III.cpp
examples/UnitGesture/gesture/: gesture.cpp
examples/UnitHeart/: UnitHeart.cpp
examples/UnitMeter/Ameter/: Ameter.cpp
examples/UnitMeter/KmeterISO/: KmeterISO.cpp
examples/UnitMeter/Vmeter/: Vmeter.cpp
examples/UnitRFID2/: UnitRFID2.cpp
examples/demo/MultipleDevices/: MultipleDevices.ino
examples/demo/MultipleUnits/: MultipleUnits.ino  README.md
examples/dump/: dump.cpp
examples/tvoc/: tvoc.cpp
lib/M5HAL/src/: M5HAL.cpp  M5HAL.hpp
lib/M5PaHub/docs/: Doxyfile
lib/M5Unit-ENV/docs/: Doxyfile
lib/M5UnitComponent/: README.md  library.json  library.properties  platformio.ini
lib/M5UnitComponent/docs/: Doxyfile
lib/M5UnitComponent/src/: M5UnitComponent.cpp  M5UnitComponent.h  M5UnitComponent.hpp
lib/M5UnitComponent/test/: common_main.cpp  unit_component_test.cpp  unit_dummy.cpp  unit_dummy.hpp
lib/M5UnitGesture/docs/: Doxyfile
lib/M5UnitMeter/docs/: Doxyfile
lib/M5Utility/: README.md  library.json  library.properties  platformio.ini
lib/M5Utility/docs/: Doxyfile
lib/M5Utility/src/: M5Utility.cpp  M5Utility.h  M5Utility.hpp
lib/M5Utility/test/: MurmurHash3.cpp  MurmurHash3.h  common_main.cpp  container_test.cpp  conversion_test.cpp  crc_test.cpp  expected_test.cpp  helper.hpp  math_test.cpp  misc_test.cpp  mmh3_test.cpp  optional_test.cpp  string_test.cpp  types_test.cpp  utility_test.cpp
pio_project/: custom_script.py  platformio.ini
pio_project/test/: unit_component_test.cpp  unit_dummy.hpp  unit_unified_test.cpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  enums_0.js  enums_1.js  enums_2.js  enums_3.js  enums_5.js  enums_7.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  (+44 more)
src/: M5UnitComponent.cpp  M5UnitComponent.h  M5UnitComponent.hpp  M5UnitUnified.cpp  M5UnitUnified.h  M5UnitUnified.hpp
src/googletest/: test_helper.hpp  test_template.hpp
src/m5_unit_component/: adapter.cpp  adapter.hpp  adapter_base.hpp  adapter_gpio.cpp  adapter_gpio.hpp  adapter_gpio_v1.cpp  adapter_gpio_v1.hpp  adapter_gpio_v2.cpp  adapter_gpio_v2.hpp  adapter_i2c.cpp  adapter_i2c.hpp  adapter_spi.cpp  adapter_spi.hpp  adapter_uart.cpp  adapter_uart.hpp  identify_functions.hpp  interface.hpp  interface_i2c.hpp  interface_spi.cpp  interface_spi.hpp  pin.cpp  pin.hpp  types.hpp  utility.cpp  utility.hpp
src/wiring/: m5_unit_unified_wiring.hpp
test/: common_main.cpp  unit_component_test.cpp  unit_dummy.cpp  unit_dummy.hpp  unit_unified_test.cpp
test/embedded/: avmeter_template.hpp  component_test.cpp  embedded_impl.cpp  embedded_main.cpp
test/embedded/test_ads1115/: ads1115_test.cpp
test/embedded/test_ameter/: ameter_test.cpp  (+1 more)
(+197 files in other folders)
